--- a/bc1qwv9rrle4r6lhrh3025efr2ew5v6q60pm6w90vk.html
+++ b/bc1qwv9rrle4r6lhrh3025efr2ew5v6q60pm6w90vk.html
@@ -89,7 +89,7 @@
 <li><a href="https://www.bitcoinwhoswho.com/tags">Tag An Address</a></li>
 <li><a href="https://www.bitcoinwhoswho.com/blog">Blog</a></li>
 </ul>
-<div style="float:right; margin:15px 66px 0px 0px; color: #BBBBBB;">BTC = $24154.55</div>
+<div style="float:right; margin:15px 66px 0px 0px; color: #BBBBBB;">BTC = $24053.95</div>
 </div>
 </div>
 <div id="top_nav_right_box" class="col-md-4 pull-right">
@@ -116,10 +116,8 @@
 <div class="float_left_box">
 <h3 class="page-header">
 BITCOIN ADDRESS REPORT
-
-<span class="top_scam_alert" id="top_scam_alert_red">
-Scam Alert: This address has been reported as fraudulent (3 times)
-</span>
+<span class="top_scam_alert" id="top_scam_alert_green">Scam Alert: None</span>
+<span class="top_scam_alert" id="top_scam_alert_red" style="display: none;"></span>
 <span class="create-btn-wrap top_btn_box">
 
 <button type="button" class="btn btn-warning " id="scam_report_btn" data-toggle="modal" data-target="#scam_report_modal">Report Scam</button>
@@ -178,7 +176,7 @@ Scam Alert: This address has been reported as fraudulent (3 times)
 <div class="alert alert-danger" role="alert" id="atm_file_error" style="display: none;"></div>
 </div>
 <div class="form-group">
-<input type="image" name="atm_captcha" id="atm_captcha" src="public/images/ajax-loader_200x70.gif" onclick="javascript:return false;" />
+ <input type="image" name="atm_captcha" id="atm_captcha" src="public/images/ajax-loader_200x70.gif" onclick="javascript:return false;" />
 <div id="atm_change_captcha_box">
 <a href="javascript:return false;" onclick="document.getElementById('atm_captcha').src='https://www.bitcoinwhoswho.com/google/captcha.php?'+Math.random();document.getElementById('atm_captcha_input').focus();" id="atm_change_captcha">Not readable? Change text.</a>
 </div>
@@ -189,7 +187,7 @@ Scam Alert: This address has been reported as fraudulent (3 times)
 </div>
 </div>
 <div class="modal-footer" id="atm_footer">
-<input type="hidden" name="atm_bitcoin_address" id="atm_bitcoin_address" value="19dENFt4wVwos6xtgwStA6n8bbA57WCS58">
+<input type="hidden" name="atm_bitcoin_address" id="atm_bitcoin_address" value="bc1qwv9rrle4r6lhrh3025efr2ew5v6q60pm6w90vk">
 <button onClick="fbq('track', 'Purchase')" type="button" class="btn btn-primary" id="atm_submit_btn">Submit</button>
 <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
 <div id="atm_status_box">
@@ -267,7 +265,7 @@ Scam Alert: This address has been reported as fraudulent (3 times)
 <div class="alert alert-danger" role="alert" id="srm_error" style="display: none;"></div>
 </div>
 <div class="modal-footer" id="srm_footer">
-<input type="hidden" name="srm_bitcoin_address" id="srm_bitcoin_address" value="19dENFt4wVwos6xtgwStA6n8bbA57WCS58">
+<input type="hidden" name="srm_bitcoin_address" id="srm_bitcoin_address" value="bc1qwv9rrle4r6lhrh3025efr2ew5v6q60pm6w90vk">
 <button onClick="fbq('track', 'Purchase');" type="button" class="btn btn-primary" id="srm_submit_btn">Submit</button>
 <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
 </div>
@@ -324,10 +322,10 @@ Scam Alert: This address has been reported as fraudulent (3 times)
 <div class="col-md-10 text-left" id="trb_left_box">
 <div class="row trblb_row">
 <div class="col-md-3 trblb_label">BTC Address</div>
-<div class="col-md-4">19dENFt4wVwos6xtgwStA6n8bbA57WCS58</div>
+<div class="col-md-4">bc1qwv9rrle4r6lhrh3025efr2ew5v6q60pm6w90vk</div>
 <div class="col-md-2 trblb_label_border"># Website Appearances</div>
 <div class="col-md-3 trblb_right_column">
-<a href="javascript:void(0);" id="trb_urls_bitcoin_found_link">1</a>
+0
 </div>
 </div>
 <div class="row trblb_row">
@@ -384,7 +382,7 @@ Repeated Outputs To
 </div>
 </div>
 <div class="col-md-2 text-left" id="trb_right_box">
-<div id="trbrb_qr_box"><img src="https://api.qrserver.com/v1/create-qr-code/?data=19dENFt4wVwos6xtgwStA6n8bbA57WCS58&amp;size=180x180" alt="QR Code" title="19dENFt4wVwos6xtgwStA6n8bbA57WCS58" /></div>
+<div id="trbrb_qr_box"><img src="https://api.qrserver.com/v1/create-qr-code/?data=bc1qwv9rrle4r6lhrh3025efr2ew5v6q60pm6w90vk&amp;size=180x180" alt="QR Code" title="bc1qwv9rrle4r6lhrh3025efr2ew5v6q60pm6w90vk" /></div>
 <div id="trbrb_share_box">
 <span class='st_sharethis_large' displayText='ShareThis'></span>
 <span class='st_facebook_large' displayText='Facebook'></span>
@@ -393,97 +391,8 @@ Repeated Outputs To
 </div>
 </div>
 </div>
-<div class="float_left_box flb_scam_records_table">
-<div class="other_bitcoin_heading collapse_link">
-<a data-toggle="collapse" href="#scam_records_table" class="obh_link">
-<span class="pull-left">
-<i class="icon_scam_records_table glyphicon glyphicon-large glyphicon-folder-close"></i>
-</span>&nbsp;
-Scam Alert
-</a>
-</div>
-<div class="collapse" id="scam_records_table">
-<div class="row bootstrap_grid_header">
-<div class="col-md-1 srtr_div"></div>
-<div class="col-md-4 srtr_div">Scam Name</div>
-<div class="col-md-5 srtr_div">URL</div>
-<div class="col-md-1 srtr_div">Image</div>
-<div class="col-md-1 srtr_div">Date</div>
-</div>
-<div class="row row_even">
-<div class="col-md-1 srtr_div">
-</div>
-<div class="col-md-4 srtr_div">John Lee</div>
-<div class="col-md-5 srtr_div">
-</div>
-<div class="col-md-1 srtr_div">
-</div>
-<div class="col-md-1 srtr_div">Apr 26th, 22</div>
-</div>
-<div class="row row_even hide" id="scam_info_69076">
-<div class="col-md-1 srtr_div"></div>
-<div class="col-md-11 srtr_div"></div>
-</div>
-<div class="row row_odd">
-<div class="col-md-1 srtr_div">
-</div>
-<div class="col-md-4 srtr_div">John Lee</div>
-<div class="col-md-5 srtr_div">
-</div>
-<div class="col-md-1 srtr_div">
-</div>
-<div class="col-md-1 srtr_div">May 18th, 22</div>
-</div>
-<div class="row row_odd hide" id="scam_info_69982">
-<div class="col-md-1 srtr_div"></div>
-<div class="col-md-11 srtr_div"></div>
-</div>
-<div class="row row_even">
-<div class="col-md-1 srtr_div">
-</div>
-<div class="col-md-4 srtr_div">John Lee</div>
-<div class="col-md-5 srtr_div">
-</div>
-<div class="col-md-1 srtr_div">
-</div>
-<div class="col-md-1 srtr_div">Jul 3rd, 22</div>
-</div>
-<div class="row row_even hide" id="scam_info_70860">
-<div class="col-md-1 srtr_div"></div>
-<div class="col-md-11 srtr_div"></div>
 </div>
 </div>
-</div>
-
-<div class="float_left_box">
-<div class="other_bitcoin_heading collapse_link">
-<a data-toggle="collapse" href="#url_bitcoin_found_table" class="obh_link">
-<span class="pull-left">
-<i class="icon_url_bitcoin_found_table glyphicon glyphicon-large glyphicon-folder-close"></i>
-</span>&nbsp;
-Website Appearances/Public Sightings
-</a>
-</div>
-<div class="collapse" id="url_bitcoin_found_table">
-<div class="row bootstrap_grid_header">
-<div class="col-md-1">Date Found</div>
-<div class="col-md-2">Description</div>
-<div class="col-md-2">More Detail</div>
-<div class="col-md-5">Website URL</div>
-<div class="col-md-2">URL Country</div>
-</div>
-<div class="row row_even">
-<div class="col-md-1">30 Sep 21</div>
-<div class="col-md-2">Anti-Human Trafficking Intelligence Initiative</div>
-<div class="col-md-2">https://followmoneyfightslavery.org/hades/</div>
-<div class="col-md-5"><a href="https://hades.cybernomad.online/investigate/cryptocurrency/19dENFt4wVwos6xtgwStA6n8bbA57WCS58">https://hades.cybernomad.online/investigate/cryptocurrency/19dENFt4wVwos6xtgwStA6n8bbA57WCS58</a></div>
-<div class="col-md-2 ip2country ip2country_192_0_78_25" data-ip-address="192.0.78.25">Loading...</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-
 </div>
 </div>
 </div>
@@ -503,7 +412,7 @@ Website Appearances/Public Sightings
 <script src="https://www.bitcoinwhoswho.com/public/js/jquery-pan/jquery.pan.js"></script>
 <script type="text/javascript">
     var get_site_url        =   "https://www.bitcoinwhoswho.com/";     //Used in search/address/index.js
-    var get_bitcoin_address =   "19dENFt4wVwos6xtgwStA6n8bbA57WCS58";  //Used in search/address/index.js
+    var get_bitcoin_address =   "bc1qwv9rrle4r6lhrh3025efr2ew5v6q60pm6w90vk";  //Used in search/address/index.js
     var get_user_id         =   0;            //Used in search/address/index.js
 </script>
 <script src="https://www.bitcoinwhoswho.com/public/js/page/search/address/index.js?v=1.4"></script>
@@ -526,7 +435,7 @@ Website Appearances/Public Sightings
   
 $.ajax({
     type: "POST",
-    url: "https://www.bitcoinwhoswho.com/search/overview/connection/bitcoin_address/19dENFt4wVwos6xtgwStA6n8bbA57WCS58/inputfound//outputfound/",
+    url: "https://www.bitcoinwhoswho.com/search/overview/connection/bitcoin_address/bc1qwv9rrle4r6lhrh3025efr2ew5v6q60pm6w90vk/inputfound//outputfound/",
     dataType: "json",
     success: function(data){
 
@@ -561,7 +470,7 @@ $("#watch_guest_submit_btn").click(function(){
     $("#watch_guest_success").hide();
     $.ajax({
     type: "POST",
-    url:  "https://www.bitcoinwhoswho.com/watch/addemail/index/bitcoin_address/19dENFt4wVwos6xtgwStA6n8bbA57WCS58/n_tx/",
+    url:  "https://www.bitcoinwhoswho.com/watch/addemail/index/bitcoin_address/bc1qwv9rrle4r6lhrh3025efr2ew5v6q60pm6w90vk/n_tx/",
     data: { 'email': $("#watch_guest_email").val()},
     dataType: "json",
     success: function(data){
@@ -594,33 +503,6 @@ $("#watch_guest_submit_btn").click(function(){
 // END OF >> WATCH GUEST POPUP - SUBMISSION
 
 //START: Convert all IP Adresses in "Website Appearances/Public Sightings" to Country via Ajax Call.
-var ip2country  =   []; // For storing IP Address to avoid duplicate calls with same ip address.
-$("#url_bitcoin_found_table div.ip2country").each(function() {    
-    // -1 returns if not exists. And IP Address must present.
-    if($(this).attr("data-ip-address").length >3 && ip2country.indexOf($(this).attr("data-ip-address"))==-1) 
-    {    
-        ip2country.push($(this).attr("data-ip-address"));
-        find_country($(this).attr("data-ip-address"));
-    }
-    else if($(this).attr("data-ip-address").length <3) // If no proper ip value.
-    {
-        $(this).html('-');
-    }
-});
-
-function find_country(ip_address)
-{
-    $.ajax({
-    type: "POST",
-    url:  "https://www.bitcoinwhoswho.com/search/overview/ip2country",
-    data: {ip_address:ip_address},
-    dataType: "json",
-    success: function(data){
-            var ip2country_class    =   ip_address.replace(/\./g, "_"); // Regular expression for all matches.
-            $(".ip2country_"+ip2country_class).html(data.ip2country); 
-        }
-    });  
-}   
 // END OF >> IP Address to Country Convertion.
 </script>
 <footer>
@@ -725,6 +607,6 @@ Bitcoin Who's Who is dedicated to profiling the extraordinary members of the bit
 </footer>
 </div>
 <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
-<script defer src="https://static.cloudflareinsights.com/beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194" integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon='{"rayId":"73b018923dcca96e","version":"2022.6.0","r":1,"token":"e9031b8c61104f9c8ff0dedabaac54c6","si":100}' crossorigin="anonymous"></script>
+<script defer src="https://static.cloudflareinsights.com/beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194" integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon='{"rayId":"73b023ddbeada7ed","version":"2022.6.0","r":1,"token":"e9031b8c61104f9c8ff0dedabaac54c6","si":100}' crossorigin="anonymous"></script>
 </body>
 </html>
