--- a/34sWufS897eXMKtK6CiHPXcLsqBp8PenUf.html
+++ b/34sWufS897eXMKtK6CiHPXcLsqBp8PenUf.html
@@ -21,7 +21,7 @@
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  gtag('js', new Da
 
   gtag('config', 'UA-2559351-3');
 </script>
